[r600/Turks] 20.0.2: modesetting/radeon driver SIGABRT at loading X (kernel 5.5.10, ppc64)
Both, modesetting and radeon driver fail to start X on my Talos II stable partition. radeon driver with Option "Accel" "off" seems to start X without crashing but I still get a black screen. Only fbdev driver succesfully starts X.
I already built xorg-server and mesa with debug symbols to get some more data. The crash also happens without the debug build.
[...]
[ 128.794] (II) AIGLX: Loaded and initialized r600
[ 128.794] (II) GLX: Initialized DRI2 GL provider for screen 0
[ 128.794] (II) Initializing extension XFree86-VidModeExtension
[ 128.794] XFree86VidModeExtensionInitVidModeAddExtension
[ 128.794] (II) Initializing extension XFree86-DGA
[ 128.794] (II) Initializing extension XFree86-DRI
[ 128.794] (II) Initializing extension DRI2
[ 128.795] (II) modeset(0): Damage tracking initialized
[ 128.795] (II) modeset(0): Setting screen physical size to 508 x 285
[ 128.871] (EE)
[ 128.871] (EE) Backtrace:
[ 128.871] (EE) 0: /usr/libexec/Xorg (xorg_backtrace+0xfff1da70) [0x1033a0cc0]
[ 128.871] (EE) 1: /usr/libexec/Xorg (0x103125000+0x2816dc) [0x1033a66dc]
[ 128.871] (EE) 2: linux-vdso64.so.1 (__kernel_sigtramp_rt64+0x0) [0x3fffab9f0498]
[ 128.871] (EE) 3: /lib64/libc.so.6 (gsignal+0xffe5535c) [0x3fffaaf1d774]
[ 128.871] (EE) 4: /lib64/libc.so.6 (abort+0xffe38d98) [0x3fffaaf01618]
[ 128.871] (EE) 5: /lib64/libc.so.6 (0x3fffaaeb9000+0x58f10) [0x3fffaaf11f10]
[ 128.872] (EE) 6: /lib64/libc.so.6 (__assert_fail+0xffe4afc8) [0x3fffaaf11fb8]
[ 128.872] (EE) 7: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x32ee8c) [0x3fffa8fafe8c]
[ 128.872] (EE) 8: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x32ef20) [0x3fffa8faff20]
[ 128.872] (EE) 9: /lib64/libpthread.so.0 (0x3fffab0df000+0x19d88) [0x3fffab0f8d88]
[ 128.872] (EE) 10: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x32f050) [0x3fffa8fb0050]
[ 128.872] (EE) 11: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x330d04) [0x3fffa8fb1d04]
[ 128.872] (EE) 12: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x43ab78) [0x3fffa90bbb78]
[ 128.872] (EE) 13: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x1e6b80) [0x3fffa8e67b80]
[ 128.872] (EE) 14: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x1e9e90) [0x3fffa8e6ae90]
[ 128.872] (EE) 15: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x416214) [0x3fffa9097214]
[ 128.872] (EE) 16: /usr/lib64/dri/r600_dri.so (0x3fffa8c81000+0x418b6c) [0x3fffa9099b6c]
[ 128.873] (EE) 17: /usr/lib64/libglapi.so.0 (0x3fffaa0e1000+0x3fb60) [0x3fffaa120b60]
[ 128.873] (EE) 18: /usr/lib64/libGL.so.1 (glTexImage2D+0xfff75c00) [0x3fffaa9255d0]
[ 128.873] (EE) 19: /usr/lib64/libepoxy.so.0 (0x3fffaa214000+0x12e690) [0x3fffaa342690]
[ 128.873] (EE) 20: /usr/lib64/xorg/modules/libglamoregl.so (0x3fffaa42d000+0x15838) [0x3fffaa442838]
[ 128.873] (EE) 21: /usr/lib64/xorg/modules/libglamoregl.so (0x3fffaa42d000+0x285f4) [0x3fffaa4555f4]
[ 128.873] (EE) 22: /usr/lib64/xorg/modules/libglamoregl.so (0x3fffaa42d000+0x28dc4) [0x3fffaa455dc4]
[ 128.873] (EE) 23: /usr/libexec/Xorg (0x103125000+0x1ddb98) [0x103302b98]
[ 128.873] (EE) 24: /usr/libexec/Xorg (ServerBitsFromGlyph+0xffd84630) [0x1031ef3b8]
[ 128.873] (EE) 25: /usr/libexec/Xorg (AllocGlyphCursor+0xffd51d60) [0x1031b9f50]
[ 128.874] (EE) 26: /usr/libexec/Xorg (CreateRootCursor+0xffd5220c) [0x1031ba414]
[ 128.874] (EE) 27: /usr/libexec/Xorg (0x103125000+0xac88c) [0x1031d188c]
[ 128.874] (EE) 28: /usr/libexec/Xorg (0x103125000+0x8d5b0) [0x1031b25b0]
[ 128.874] (EE) 29: /lib64/libc.so.6 (0x3fffaaeb9000+0x48cb0) [0x3fffaaf01cb0]
[ 128.874] (EE) 30: /lib64/libc.so.6 (__libc_start_main+0xffe3b780) [0x3fffaaf01ed0]
[ 128.874] (EE)
[ 128.874] (EE)
Fatal server error:
[ 128.874] (EE) Caught signal 6 (Aborted). Server aborting
Both modesetting and radeon driver leave an identical stacktrace:
PID: 772 (Xorg)
UID: 0 (root)
GID: 0 (root)
Signal: 6 (ABRT)
Timestamp: Sat 2020-03-21 15:11:21 CET (1min 9s ago)
Command Line: /usr/libexec/Xorg :0 -seat seat0 -auth /var/run/lightdm/root/:0 -nolisten tcp vt7 -novtswitch
Executable: /usr/libexec/Xorg
Control Group: /system.slice/lightdm.service
Unit: lightdm.service
Slice: system.slice
Boot ID: 93d185e043044a5b8dd2b7ab1e8bc326
Machine ID: 3f89104fd8e846edb53c46af433b901e
Hostname: T1000
Storage: /var/lib/systemd/coredump/core.Xorg.0.93d185e043044a5b8dd2b7ab1e8bc326.772.1584799881000000000000.lz4
Message: Process 772 (Xorg) of user 0 dumped core.
Stack trace of thread 772:
#0 0x00003fff895bd774 __libc_signal_restore_set (libc.so.6 + 0x64774)
#1 0x00003fff895a1618 __GI_abort (libc.so.6 + 0x48618)
#2 0x000000013ee90448 OsAbort (Xorg + 0x285448)
#3 0x000000013ee97820 AbortServer (Xorg + 0x28c820)
#4 0x000000013ee9850c FatalError (Xorg + 0x28d50c)
#5 0x000000013ee8c764 OsSigHandler (Xorg + 0x281764)
#6 0x00003fff8a090498 __kernel_sigtramp_rt64 (linux-vdso64.so.1 + 0x498)
#7 0x00003fff895bd774 __libc_signal_restore_set (libc.so.6 + 0x64774)
#8 0x00003fff895a1618 __GI_abort (libc.so.6 + 0x48618)
#9 0x00003fff895b1f10 __assert_fail_base (libc.so.6 + 0x58f10)
#10 0x00003fff895b1fb8 __GI___assert_fail (libc.so.6 + 0x58fb8)
#11 0x00003fff8764fe8c _mesa_array_format_flip_channels (r600_dri.so + 0x32ee8c)
#12 0x00003fff8764ff20 format_array_format_table_init (r600_dri.so + 0x32ef20)
#13 0x00003fff89798d88 __pthread_once_slow (libpthread.so.0 + 0x19d88)
#14 0x00003fff87650050 call_once (r600_dri.so + 0x32f050)
#15 0x00003fff87651d04 _mesa_format_matches_format_and_type (r600_dri.so + 0x330d04)
#16 0x00003fff8775bb78 _mesa_texstore_can_use_memcpy (r600_dri.so + 0x43ab78)
#17 0x00003fff87507b80 st_TexSubImage (r600_dri.so + 0x1e6b80)
#18 0x00003fff8750ae90 st_TexImage (r600_dri.so + 0x1e9e90)
#19 0x00003fff87737214 teximage (r600_dri.so + 0x416214)
#20 0x00003fff87739b6c _mesa_TexImage2D (r600_dri.so + 0x418b6c)
#21 0x00003fff887c0b60 shared_dispatch_stub_183 (libglapi.so.0 + 0x3fb60)
#22 0x00003fff88fc55d0 glTexImage2D (libGL.so.1 + 0xc15d0)
#23 0x00003fff889e2690 n/a (libepoxy.so.0 + 0x12e690)
#24 0x00003fff88ae2838 glamor_font_get (libglamoregl.so + 0x15838)
#25 0x00003fff88af55f4 glamor_poly_text (libglamoregl.so + 0x285f4)
#26 0x00003fff88af5dc4 glamor_poly_text16 (libglamoregl.so + 0x28dc4)
#27 0x000000013ede8b98 damagePolyText16 (Xorg + 0x1ddb98)
#28 0x000000013ecd53b8 ServerBitsFromGlyph (Xorg + 0xca3b8)
#29 0x000000013ec9ff50 AllocGlyphCursor (Xorg + 0x94f50)
#30 0x000000013eca0414 CreateRootCursor (Xorg + 0x95414)
#31 0x000000013ecb788c dix_main (Xorg + 0xac88c)
#32 0x000000013ec985b0 main (Xorg + 0x8d5b0)
#33 0x00003fff895a1cb0 generic_start_main (libc.so.6 + 0x48cb0)
#34 0x00003fff895a1ed0 __libc_start_main (libc.so.6 + 0x48ed0)
Stack trace of thread 779:
#0 0x00003fff89795a1c futex_wait_cancelable (libpthread.so.0 + 0x16a1c)
#1 0x00003fff879f478c cnd_wait (r600_dri.so + 0x6d378c)
#2 0x00003fff879f4050 impl_thrd_routine (r600_dri.so + 0x6d3050)
#3 0x00003fff8978c078 start_thread (libpthread.so.0 + 0xd078)
#4 0x00003fff896a6130 __clone (libc.so.6 + 0x14d130)
Reading symbols from /usr/libexec/Xorg...
Reading symbols from /usr/lib64/debug//usr/libexec/Xorg.debug...
[New LWP 772]
[New LWP 779]
[New LWP 780]
[New LWP 777]
[New LWP 776]
[New LWP 778]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `/usr/libexec/Xorg :0 -seat seat0 -auth /var/run/lightdm/root/:0 -nolisten tcp v'.
Program terminated with signal SIGABRT, Aborted.
#0 0x00003fff895bd774 in __libc_signal_restore_set (set=0x3fffdf5bcc98)
at ../sysdeps/unix/sysv/linux/internal-signals.h:84
84 return INTERNAL_SYSCALL (rt_sigprocmask, err, 4, SIG_SETMASK, set, NULL,
[Current thread is 1 (Thread 0x3fff8a0cb010 (LWP 772))]
Some data about the machine:
T1000 /home/ef # lspci -v -s 0000:01:00.0
0000:01:00.0 VGA compatible controller: Advanced Micro Devices, Inc. [AMD/ATI] Turks XT [Radeon HD 6670/7670] (prog-if 00 [VGA controller])
Subsystem: PC Partner Limited / Sapphire Technology Turks XT [Radeon HD 6670/7670]
Flags: bus master, fast devsel, latency 0, IRQ 49, NUMA node 0
Memory at 6000000000000 (64-bit, prefetchable) [size=256M]
Memory at 600c000000000 (64-bit, non-prefetchable) [size=128K]
I/O ports at <unassigned> [disabled]
Expansion ROM at 600c000020000 [disabled] [size=128K]
Capabilities: [50] Power Management version 3
Capabilities: [58] Express Legacy Endpoint, MSI 00
Capabilities: [a0] MSI: Enable+ Count=1/1 Maskable- 64bit+
Capabilities: [100] Vendor Specific Information: ID=0001 Rev=1 Len=010 <?>
Capabilities: [150] Advanced Error Reporting
Kernel driver in use: radeon
Kernel modules: radeon
# inxi -b
System: Host: T1000 Kernel: 5.5.10-gentoo-TalosII ppc64 bits: 64 Desktop: Openbox 3.6.1
Distro: Gentoo Base System release 2.6
Machine: Type: PowerPC Device System: T2P9D01 REV 1.01 details: PowerNV T2P9D01 REV 1.01 rev: 2.2 (pvr 004e 1202)
CPU: 32-Core: POWER9 altivec supported type: MCP speed: 2700 MHz
Graphics: Device-1: Advanced Micro Devices [AMD/ATI] Turks XT [Radeon HD 6670/7670] driver: radeon v: kernel
Device-2: ASPEED Graphics Family driver: N/A
Display: x11 server: X.Org 1.20.7 driver: fbdev resolution: 1920x1080~N/A
OpenGL: renderer: llvmpipe (LLVM 9.0.1 128 bits) v: 3.3 Mesa 20.0.2
Network: Device-1: Broadcom and subsidiaries NetXtreme BCM5719 Gigabit Ethernet PCIe driver: tg3
Device-2: Broadcom and subsidiaries NetXtreme BCM5719 Gigabit Ethernet PCIe driver: tg3
Drives: Local Storage: total: 447.13 GiB used: 19.91 GiB (4.5%)
Info: Processes: 352 Uptime: 1h 45m Memory: 62.75 GiB used: 1.08 GiB (1.7%) Shell: bash inxi: 3.0.36
modesetting_Xorg.0.log radeon_Xorg.0.log radeon-accel-off_Xorg.0.log fbdev_Xorg.0.log xorg_stacktrace.txt core.Xorg.0.93d185e043044a5b8dd2b7ab1e8bc326.772.1584799881000000000000.lz4